--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ body {
 }
 
 .timer{
-  /* background: url("../assets/BlackTicTech.jpeg") fixed center center; */
+  background: url("../assets/bg2.png") fixed center center;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -147,7 +147,7 @@ body {
   align-items: center;
   font-size: 1.5rem;
   padding: 0;
-  padding-top: 0;
+  padding-top: 50px;
 }
 
 .about-section h1{
@@ -303,6 +303,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center; */
+  /* background: url("../assets/bg2.png") fixed center center; */
 }
 
 .theme-card i {
